<resources>
    <string name="app_name">file storage</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="textview">TextView</string>
    <string name="enter_any_data">enter any data</string>

    <string name="name">Name</string>
    <string name="e_mail_id">E-mail id</string>
    <string name="enter_your_e_mail">enter your e-mail</string>
    <string name="password">password</string>
    <string name="enter_passoward">enter passoward</string>

    <string name="bye">bye</string>
    <string name="hello">hello</string>
    <string name="hii">hii</string>

    <string name="state">state</string>
    <string name="enter_your_city">enter your city</string>
    <string name="city">city</string>
    <string name="submit">submit</string>
    <string name="sign_up_form">sign up form</string>
    <string name="enter_your_name">enter your name</string>
    <string name="button">Button</string>
    <string name="save">save</string>
</resources>
